sabza-franchise-/kubernetes/sabza-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabza-frontend-ingress
  namespace: sabza-landingpage-2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: sabza-backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabza-frontend-service
            port:
              number: 80
